--- a/MvcModels/Views/Home/Index.cshtml
+++ b/MvcModels/Views/Home/Index.cshtml
@@ -41,4 +41,20 @@
             @Model.PersonRole
         </td>
     </tr>
+    <tr>
+        <th>
+            City:
+        </th>
+        <td>
+            @Model.HomeAdress?.City
+        </td>
+    </tr>
+    <tr>
+        <th>
+            Country:
+        </th>
+        <td>
+            @Model.HomeAdress?.Country
+        </td>
+    </tr>
 </table>
